# miners-cpp

./: CMakeLists.txt  Makefile  main.cpp
engine/: asteroid_map.cpp  asteroid_map.hpp  base.cpp  base.hpp  definitions.hpp  game_engine.cpp  game_engine.hpp  point.cpp  point.hpp  resource.cpp  resource.hpp  robot.cpp  robot.hpp  robot_config.hpp
modules/: biggest.cpp  biggest.hpp  metrics.cpp  metrics.hpp  minsum.cpp  minsum.hpp  nearest.cpp  nearest.hpp
ui/picasso/: color.cpp  color.hpp  picasso.cpp  picasso.hpp
